[package]
edition = "2021"
name = "SpeedTest"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.20", features = ["derive", "std"], default-features = false}
reqwest = {version = "0.12.9", features = ["rustls-tls"], default-features = false}
tokio = {version = "1.41.0", features = ["rt-multi-thread", "macros"], default-features = false}
